Fix code elements wrapping on mobile chrome

--- a/static/main.css
+++ b/static/main.css
@@ -43,6 +43,7 @@ code {
   display: block;
   background-color: #ddd;
   padding: 0.5rem;
+  white-space: nowrap;
   overflow-x: scroll;
 }
 
